--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="/">Home <span class="sr-only">(current)</span></a></li>
+          <!---<li><a href="/">Home <span class="sr-only">(current)</span></a></li>-->
           <li><a href="/products.html">Products</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
