--- a/app/views/products/home.html.erb
+++ b/app/views/products/home.html.erb
@@ -1,9 +1,15 @@
-<div class="col-lg-12">
+<!-- <div class="col-lg-12">
   <h1>Welcome to the iPhone store homepage!</h1>
   <p>Browse through our list of products by selecting the <a href="/products.html">'Products'</a> link in the navigation bar.</p>
 </div>
 <br>
-<br>
+<br> -->
+
+<div class="jumbotron">
+  <h1>Welcome to the iPhone store homepage!</h1>
+  <p>Browse through our list of products by selecting the button below.</p>
+  <p><a class="btn btn-primary btn-lg" href="/products" role="button">Learn more</a></p>
+</div>
 <!-- <div class="center">
   <h3>Check out our best seller! The <%= @product.name %></h3>
     <div class="center">
