--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -5,7 +5,8 @@
 @import "bootstrap";
 
 body { 
-    padding-top: 65px; 
+  padding-top: 65px;
+  font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
 }
 
 .center {
@@ -13,9 +14,27 @@ body {
   width: 500px;
 }
 
+.homepage {
+  padding: 50px;
+}
+
 .inventory-table {
   th, td {
     padding: 15px;
     text-align: left;
   }
+}
+
+.btn-product{
+  width: 100%;
+}
+
+a.product-link{
+  color: #333333;
+  text-decoration: none;
+}
+
+a:hover.product-link{
+  color: #333333;
+  text-decoration: none;
 }
