--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,18 @@
           <!---<li><a href="/">Home <span class="sr-only">(current)</span></a></li>-->
           <li><a href="/products">Products</a></li>
         </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Login</a></li>
+        </ul>
+
+        <form class="navbar-form navbar-right" method="get" role="search">
+                <div class="form-group">
+                  <input type="text" name="searchterm" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">Search</button>
+              </form>
+
       </div><!-- /.navbar-collapse -->
 
     </div><!-- /.container -->
