--- a/app/views/products/home.html.erb
+++ b/app/views/products/home.html.erb
@@ -1,18 +1,13 @@
-<!-- <div class="col-lg-12">
-  <h1>Welcome to the iPhone store homepage!</h1>
-  <p>Browse through our list of products by selecting the <a href="/products.html">'Products'</a> link in the navigation bar.</p>
+<div class="row">
+  <div class="center">
+    <a href="/products">
+      <img src="http://store.storeimages.cdn-apple.com/4948/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone6p/gray/iphone6p-gray-select-2014_GEO_US?wid=470&hei=556&fmt=png-alpha&qlt=95&.v=1441801857911">
+    </a>
+  </div>
 </div>
-<br>
-<br> -->
+<div class="row">
+  <div class="homepage">
+    <h4 class="center">The iPhone 6 Plus. It's simply better in every way.</h4>
+  </div>
+</div>
 
-<div class="jumbotron">
-  <h1>Welcome to the iPhone store homepage!</h1>
-  <p>Browse through our list of products by selecting the button below.</p>
-  <p><a class="btn btn-primary btn-lg" href="/products" role="button">Learn more</a></p>
-</div>
-<!-- <div class="center">
-  <h3>Check out our best seller! The <%= @product.name %></h3>
-    <div class="center">
-      <img src="<%= @product.image %>">
-    </div>
-</div> -->
