--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,32 +1,33 @@
+<div class="col-md-12">
 <% @products.each do |product| %>
-  
-  <div class="row">
-    <div class="col-md-4">
-      <a href="/products/<%= product.id %>"><img src="<%= product.image %>" class="img-thumbnail"></a>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail" >
+      <a href="/products/<%= product.id %>">
+        <img src="<%= product.image %>" class="img-responsive">
+      </a>
+      <div class="caption">
+        <div class="row">
+          <div class="col-md-8 col-xs-8">
+            <h3>
+              <a href="/products/<%= product.id %>" class="product-link">
+                <%= product.name %>
+              </a>
+            </h3>
+          </div>
+          <div class="col-md-4 col-xs-4 price">
+            <h3>
+            <label><%= product.price %></label></h3>
+          </div>
+        </div>
+        <p><%= product.description %></p>
+        <div class="row">
+          <div class="col-md-12">
+            <a href="#" class="btn btn-success btn-product"><span class="glyphicon glyphicon-shopping-cart"></span> Buy</a></div>
+        </div>
+
+        <p> </p>
+      </div>
     </div>
-
-    <div class="col-md-8" product_details>
-      <div class="row">
-        <div class="col-md-12">
-        <!-- <h2><a href="/products/<%= product.id %>"><%= product.name %></a></h2> -->
-        <h2><%= link_to product.name, "/products/#{product.id}" %></h2>
-        </div>
-      </div> 
-
-      <div class="row">
-        <div class="col-md-2">
-          <button class="btn btn-default" type="submit">Buy Now!</button>
-        </div>
-        <div class="col-md-10">
-          <%= product.price %>
-        </div>
-      </div> 
-      <div class="row">
-        <div class="col-md-12">
-          <%= product.description %>
-        </div>
-      </div> 
-    </div> 
   </div>
-
 <% end %>
+</div> 
