--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,27 +1,23 @@
-<div class="row">
-  <div class="col-md-4">
-    <a href="/products/<%= @product.id %>"><img src="<%= @product.image %>" class="img-thumbnail"></a>
+<div class="col-md-12">
+  <div class="col-sm-6 col-md-4">
+      <img src="<%= @product.image %>" class="img-responsive">
   </div>
-
-  <div class="col-md-8" product_details>
-    <div class="row">
-      <div class="col-md-12">
-      <h2><%= link_to @product.name, "/products/#{@product.id}" %></h2>
-      </div>
-    </div> 
-
-    <div class="row">
-      <div class="col-md-2">
-        <button class="btn btn-default" type="submit">Buy Now!</button>
-      </div>
-      <div class="col-md-10">
-        <%= @product.price %>
-      </div>
-    </div> 
-    <div class="row">
-      <div class="col-md-12">
-        <%= @product.description %>
-      </div>
-    </div> 
-  </div> 
-</div>
+  <div class="col-sm-6 col-md-4">
+      <div class="caption">
+        <div class="row">
+          <div class="col-md-8 col-xs-8">
+            <h3><%= @product.name %></h3>
+          </div>
+          <div class="col-md-4 col-xs-4 price">
+            <h3>
+            <label><%= @product.price %></label></h3>
+          </div>
+        </div>
+        <p><%= @product.description %></p>
+        <div class="row">
+          <div class="col-md-12">
+            <a href="#" class="btn btn-success btn-product"><span class="glyphicon glyphicon-shopping-cart"></span> Buy</a></div>
+        </div>
+    </div>
+  </div>
+</div> 
