tweaked homepage style

--- a/app/views/products/home.html.erb
+++ b/app/views/products/home.html.erb
@@ -1,13 +1,15 @@
 <div class="row">
-  <div class="center">
+  <div class="center-home">
     <a href="/products">
-      <img src="http://store.storeimages.cdn-apple.com/4948/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone6p/gray/iphone6p-gray-select-2014_GEO_US?wid=470&hei=556&fmt=png-alpha&qlt=95&.v=1441801857911">
+      <%= image_tag 'http://store.storeimages.cdn-apple.com/4948/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone6p/gray/iphone6p-gray-select-2014_GEO_US?wid=470&hei=556&fmt=png-alpha&qlt=95&.v=1441801857911', class: "img-responsive", width: 400 %>
     </a>
   </div>
 </div>
 <div class="row">
   <div class="homepage">
-    <h4 class="center">The iPhone 6 Plus. It's simply better in every way.</h4>
+
+    <h4 class="center-home">The iPhone 6 Plus. It's simply better in every way.</h4>
+
   </div>
 </div>
 
