--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
   <div class="col-sm-6 col-md-4">
       <img src="<%= @product.image %>" class="img-responsive">
   </div>
-  <div class="col-sm-6 col-md-4">
+  <div class="col-sm-6 col-md-8">
       <div class="caption">
         <div class="row">
           <div class="col-md-8 col-xs-8">
@@ -16,7 +16,7 @@
         <p><%= @product.description %></p>
         <div class="row">
           <div class="col-md-12">
-            <a href="#" class="btn btn-success btn-product"><span class="glyphicon glyphicon-shopping-cart"></span> Buy</a></div>
+            <a href="#" class="btn btn-success"><span class="glyphicon glyphicon-shopping-cart"></span> Buy</a></div>
         </div>
     </div>
   </div>
