changed price to decimal in db. added tax and total cost to layout

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -43,3 +43,10 @@ a:hover.product-link{
   color: #333333;
   text-decoration: none;
 }
+
+#sale_message {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
