--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,7 +16,7 @@
           </div>
           <div class="col-md-4 col-xs-4 price">
             <h3>
-            <label><%= product.price %></label></h3>
+            <label>$<%= product.cost %></label></h3>
           </div>
         </div>
         <p><%= product.description %></p>
