--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
         <ul class="nav navbar-nav">
           <!---<li><a href="/">Home <span class="sr-only">(current)</span></a></li>-->
           <li><a href="/products">Products</a></li>
+          <li><a href="/inventory">Inventory</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
