--- a/app/views/products/inventory.html.erb
+++ b/app/views/products/inventory.html.erb
@@ -11,7 +11,7 @@
         <div class="row">
           <td><%= product.id %></td>
           <td><%= product.name %></td>
-          <td><%= product.price %></td>
+          <td><%= product.cost %></td>
           <td><%= link_to "Show", "/products/#{product.id}", class: "btn btn-default" %></td>
           <td><a href="/products/<%= product.id %>/edit" class="btn btn-default">Edit</a></td>
           <td><a data-confirm="Are you sure?" data-method="delete" href="/products/<%= product.id %>" class="btn btn-danger">Delete</a></td>
