--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,7 +19,7 @@
             <label>$<%= product.cost %></label></h3>
           </div>
         </div>
-        <p><%= product.description %></p>
+        <p id="description"><%= product.description %></p>
         <div class="row">
           <div class="col-md-12">
             <a href="#" class="btn btn-success btn-product"><span class="glyphicon glyphicon-shopping-cart"></span> Buy</a></div>
