--- a/app/views/products/inventory.html.erb
+++ b/app/views/products/inventory.html.erb
@@ -3,6 +3,7 @@
     <th>Product ID</th>
     <th>Product Name</th>
     <th>Product Price</th>
+    <th>Product Inventory</th>
   </tr>
 <% @products.each do |product| %>
   <tr>
@@ -12,6 +13,7 @@
           <td><%= product.id %></td>
           <td><%= product.name %></td>
           <td><%= product.cost %></td>
+          <td><%= product.inventory %></td>
           <td><%= link_to "Show", "/products/#{product.id}", class: "btn btn-default" %></td>
           <td><a href="/products/<%= product.id %>/edit" class="btn btn-default">Edit</a></td>
           <td><a data-confirm="Are you sure?" data-method="delete" href="/products/<%= product.id %>" class="btn btn-danger">Delete</a></td>
