--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,8 @@
         <ul class="nav navbar-nav">
           <!---<li><a href="/">Home <span class="sr-only">(current)</span></a></li>-->
           <li><a href="/products">Products</a></li>
+          <li><a href="/products/?filter=random">Random Product</a></li>
+
           <li><a href="/inventory">Inventory</a></li>
         </ul>
 
@@ -31,12 +33,16 @@
           <li><a href="#">Login</a></li>
         </ul>
 
-        <form class="navbar-form navbar-right" method="get" role="search">
+        <%= form_tag "/search", class: "navbar-form navbar-right" do %>
+          <%= text_field_tag :search, nil, placeholder: "Search Products", class: "form-control" %>
+          <%= submit_tag "Search", class: "btn btn-default" %>
+        <% end %>
+        <!-- <form class="navbar-form navbar-right" method="get" role="search">
                 <div class="form-group">
                   <input type="text" name="searchterm" class="form-control" placeholder="Search">
                 </div>
                 <button type="submit" class="btn btn-default">Search</button>
-              </form>
+              </form> -->
 
       </div><!-- /.navbar-collapse -->
 
