--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-12">
   <div class="col-sm-6 col-md-4">
-      <img src="<%= @product.image %>" class="img-responsive">
+      <img src="<%= @product.image_url %>" class="img-responsive">
   </div>
   <div class="col-sm-6 col-md-8">
       <div class="caption">
@@ -14,6 +14,7 @@
         <div class="row">
           <div class="col-md-8 col-xs-8 silver-border">
             <h3><%= @product.name %></h3>
+            <h5>By: <%= @product.supplier_name %></h5>
             <span id="<%= @product.stock_class %>"><%= @product.in_stock? %></span>
             <br>
             <br>
@@ -39,7 +40,7 @@
         <br>
         <div class="row">
           <div class="col-md-12">
-            <a href="#" class="btn btn-success"><span class="glyphicon glyphicon-shopping-cart"></span> Buy</a></div>
+            <a href="#" class="btn btn-success <%= @product.buy_out_of_stock_class %>"><span class="glyphicon glyphicon-shopping-cart"></span> Buy</a></div>
         </div>
     </div>
   </div>
