added carousel to product show pages. Added images controller with views to images

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -108,3 +108,9 @@ a:hover.product-link{
   padding: 5px 10px;
   font-size: 20px;
 }
+
+.product_edit_thumbnail {
+  height: 100px;
+  width: 100px;
+  display: inline;
+}
