--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,40 @@
 <div class="col-md-12">
   <div class="col-sm-6 col-md-4">
-      <img src="<%= @product.image_url %>" class="img-responsive">
+      
+      <!-- Carousel Div Start -->
+      <div id="image-carousel" class="carousel slide" data-ride="carousel">
+
+      <% @product.images.each_with_index do |image, index| %>
+          
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#image-carousel" data-slide-to="<%= index %>" class="active">
+                <!-- Need to seperate active state on images -->
+              </li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item <% if index == 0 %>active<% end %>"> 
+                <img src="<%= image.image_url %>" class="img-responsive">
+                <!-- <div class="carousel-caption">
+                  ...
+                </div> -->
+              </div>
+            </div>
+      <% end %>
+
+        <!-- Carousel Controls -->
+        <a class="left carousel-control" href="#image-carousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#image-carousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
   </div>
   <div class="col-sm-6 col-md-8">
       <div class="caption">
