added devise to cookbook and store apps. Can sign up, login, and logout

--- a/app/views/products/home.html.erb
+++ b/app/views/products/home.html.erb
@@ -1,15 +1,29 @@
 <div class="row">
-  <div class="center-home">
-    <a href="/products">
-      <%= image_tag 'http://store.storeimages.cdn-apple.com/4948/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone6p/gray/iphone6p-gray-select-2014_GEO_US?wid=470&hei=556&fmt=png-alpha&qlt=95&.v=1441801857911', class: "img-responsive", width: 400 %>
-    </a>
-  </div>
-</div>
-<div class="row">
-  <div class="homepage">
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      </ol>
 
-    <h4 class="center-home">The iPhone 6 Plus. It's simply better in every way.</h4>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active center-home"> 
+          <img src="<%= @product.get_the_first_image %>" class="img-responsive">
+          <!-- <div class="carousel-caption">
+            ...
+          </div> -->
+        </div>
+      </div>
 
-  </div>
+      <!-- Controls -->
+      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
 </div>
 
