--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -16,7 +16,7 @@ body {
 
 .center-home {
   margin: auto;
-  width: 400px;
+  max-width: 400px;
 }
 
 .homepage {
@@ -27,7 +27,9 @@ body {
   th, td {
     padding: 15px;
     text-align: center;
-  }
+    max-width: 500px;
+    word-wrap: break-word;
+  } 
 }
 
 .btn-product{
