--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,8 +1,9 @@
-<table class="inventory-table">
+<table class="inventory-table" id="image-table">
   <tr>
     <th>Image ID</th>
     <th>Product ID</th>
     <th>Image URL</th>
+    <th>Image Thumbnail</th>
   </tr>
 <% @images.each do |image| %>
   <tr>
@@ -12,6 +13,7 @@
           <td><%= image.id %></td>
           <td><%= image.product_id %></td>
           <td><%= image.image_url %></td>
+          <td><a href="/images/<%= image.id %>"><img src="<%= image.image_url %>" class="img-responsive product_edit_thumbnail"></a></td>
           <td><a href="/images/<%= image.id %>/edit" class="btn btn-default">Edit</a></td>
           <td><a data-confirm="Are you sure?" data-method="delete" href="/images/<%= image.id %>" class="btn btn-danger">Delete</a></td>
         </div>  
