--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,20 +18,29 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Apple</a>
+        <a class="navbar-brand" href="/">PhoneZ</a>
       </div>
 
       <div class="collapse navbar-collapse" id="mobilenav">
         <ul class="nav navbar-nav">
           <!---<li><a href="/">Home <span class="sr-only">(current)</span></a></li>-->
-          <li><a href="/products">Products</a></li>
-          <li><a href="/products/?filter=random">Random Product</a></li>
+          <li><a href="/products">Store</a></li>
+          <!-- <li><a href="/products/?filter=random">Random Product</a></li> -->
 
           <li><a href="/inventory">Inventory</a></li>
+          <li><a href="/images">Images</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Login</a></li>
+          
+          <% if current_user %>
+            <!-- <li><%= current_user.email %></li> -->
+          <% else %>
+            <li><a href="/users/sign_up">Sign Up</a></li>
+          <% end %>
+
+          <li><%= link_to "Sign Out", "/users/sign_out", method: :delete if user_signed_in? %></li>
+          <li><%= link_to "Sign In", "/users/sign_in", method: :get if !user_signed_in? %></li>
         </ul>
 
         <%= form_tag "/search", class: "navbar-form navbar-right" do %>
