carousel working on homepage and show pages

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -11,16 +11,11 @@ body {
 
 .center {
   margin: auto;
-  width: 500px;
-}
-
-.center-home {
-  margin: auto;
-  max-width: 400px;
+  max-width: 1000px;
 }
 
 .homepage {
-  padding: 50px;
+  max-height: 590px;
 }
 
 .inventory-table {
