--- a/app/views/products/home.html.erb
+++ b/app/views/products/home.html.erb
@@ -1,26 +1,32 @@
 <div class="row">
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Carousel Div Start -->  
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <% @product.images.each_with_index do |image, index| %>
+          <li data-target="#myCarousel" data-slide-to="<%= index + 1 %>" class="<%= index == 0 ? 'active' : ''%>">
+          </li>
+        <% end %>
       </ol>
 
       <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active center-home"> 
-          <img src="<%= @product.get_the_first_image %>" class="img-responsive">
-          <!-- <div class="carousel-caption">
-            ...
-          </div> -->
-        </div>
+      <div class="carousel-inner">
+        <% @product.images.each_with_index do |image, index| %>
+          <div class="<%= index == 0 ? 'item active' : 'item' %>">
+            <%= image_tag image.image_url, class: "center homepage"%>
+            <!-- <div class="carousel-caption">
+                  ...
+                </div> -->
+          </div> 
+        <% end %>      
       </div>
 
-      <!-- Controls -->
-      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+      <!-- Carousel Controls -->
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
