--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,73 +1,81 @@
 <div class="col-md-12">
   <div class="col-sm-6 col-md-4">
-      
-      <!-- Carousel Div Start -->
-      <div id="image-carousel" class="carousel slide" data-ride="carousel">
+    
+    <!-- Carousel Div Start -->  
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <% @product.images.each_with_index do |image, index| %>
+          <li data-target="#myCarousel" data-slide-to="<%= index + 1 %>" class="<%= index == 0 ? 'active' : ''%>">
+          </li>
+        <% end %>
+      </ol>
 
-      <% @product.images.each_with_index do |image, index| %>
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-              <li data-target="#image-carousel" data-slide-to="<%= index %>" class="active">
-                <!-- Need to seperate active state on images -->
-              </li>
-            </ol>
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-              <div class="item active"> 
-                <img src="<%= image.image_url %>" class="img-responsive">
-                <!-- <div class="carousel-caption">
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <% @product.images.each_with_index do |image, index| %>
+          <div class="<%= index == 0 ? 'item active' : 'item' %>">
+            <%= image_tag image.image_url, class: "center" %>
+            <!-- <div class="carousel-caption">
                   ...
                 </div> -->
-              </div>
-            </div>
-      <% end %>
-
-        <!-- Carousel Controls -->
-        <a class="left carousel-control" href="#image-carousel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#image-carousel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+          </div> 
+        <% end %>      
       </div>
 
+      <!-- Carousel Controls -->
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    
   </div>
-  <div class="col-sm-6 col-md-8">
+
+  <div class="col-sm-6 col-md-6">
       <div class="caption">
         <div class="row">
-          <div class="col-md-12 col-xs-12">
-            <h3>
-              <span id="sale_message" class="label label-info"><%= @product.sale_message %></span>
-            </h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-8 col-xs-8 silver-border">
-            <h3><%= @product.name %></h3>
-            <h5>By: <%= @product.supplier_name %></h5>
-            <span id="<%= @product.stock_class %>"><%= @product.in_stock? %></span>
-            <br>
-            <br>
-            <p id="description"><%= @product.description %></p>
-          </div>
-          <div class="col-md-4 col-xs-4">
-            <table id="price_table">
-              <tr>
-                <td><strong>Price: </strong></td>
-                <td>$<%= @product.cost %></td>
-              </tr>
-              <tr>
-                <td><strong>Tax: </strong></td>
-                <td>$<%= @product.sale_tax %></td>
-              </tr>
-              <tr>
-                <td><strong>Total: </strong></td>
-                <td>$<%= @product.total_cost %></td>
-              </tr>
-            </table>
+          <div class="col-md-12 col-xs-12 silver-border">
+            <div class="row">
+              <div class="col-sm-7 col-md-7">  
+                <% if @product.sale_message %>
+                    <h3>
+                      <span id="sale_message" class="label label-info"><%= @product.sale_message %></span>
+                    </h3>
+                <% else %>
+                <% end %>
+
+                <h3><%= @product.name %></h3>
+                <h5>By: <%= @product.supplier_name %></h5>
+                <span id="<%= @product.stock_class %>"><%= @product.in_stock? %></span>
+              </div>
+              <div class="col-sm-5 col-md-5">
+                <table id="price_table">
+                  <tr>
+                    <td><strong>Price: </strong></td>
+                    <td>$<%= @product.cost %></td>
+                  </tr>
+                  <tr>
+                    <td><strong>Tax: </strong></td>
+                    <td>$<%= @product.sale_tax %></td>
+                  </tr>
+                  <tr>
+                    <td><strong>Total: </strong></td>
+                    <td>$<%= @product.total_cost %></td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+
+            <div class="row">   
+              <br>
+              <p id="description"><%= @product.description %></p>
+            </div>
+
           </div>
         </div>
         <br>
@@ -76,7 +84,7 @@
             <%= form_tag "/orders", method: :post do %>
               <div>
                 <%= label_tag :product_id %>
-                <%= text_field_tag :product_id %>
+                <%= text_field_tag :product_id, @product.id %>
               </div>
 
               <div>
