--- a/app/views/products/home.html.erb
+++ b/app/views/products/home.html.erb
@@ -1,10 +1,10 @@
-<div class="row">
+<!-- <div class="row"> -->
     <!-- Carousel Div Start -->  
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <% @product.images.each_with_index do |image, index| %>
-          <li data-target="#myCarousel" data-slide-to="<%= index + 1 %>" class="<%= index == 0 ? 'active' : ''%>">
+          <li data-target="#myCarousel" data-slide-to="<%= index %>" class="<%= index == 0 ? 'active' : ''%>">
           </li>
         <% end %>
       </ol>
@@ -22,14 +22,14 @@
       </div>
 
       <!-- Carousel Controls -->
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <!-- <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
       <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
-      </a>
+      </a> -->
     </div>
-</div>
+<!-- </div> -->
 
