--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -41,7 +41,7 @@
           </div>
           <div class="col-md-4 col-xs-4 price">
             <h3>
-            <label>$<%= product.cost %></label></h3>
+            <label><%=number_to_currency( product.cost )%></label></h3>
           </div>
         </div>
         <p id="description"><%= product.description %></p>
