--- a/app/views/products/inventory.html.erb
+++ b/app/views/products/inventory.html.erb
@@ -12,7 +12,7 @@
         <div class="row">
           <td><%= product.id %></td>
           <td><%= product.name %></td>
-          <td><%= product.cost %></td>
+          <td><%=number_to_currency( product.cost )%></td>
           <td><%= product.inventory %></td>
           <td><%= link_to "Show", "/products/#{product.id}", class: "btn btn-default" %></td>
           <td><a href="/products/<%= product.id %>/edit" class="btn btn-default">Edit</a></td>
