--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -57,23 +57,25 @@
                 <table id="price_table">
                   <tr>
                     <td><strong>Price: </strong></td>
-                    <td>$<%= @product.cost %></td>
+                    <td><%=number_to_currency( @product.cost )%></td>
                   </tr>
                   <tr>
                     <td><strong>Tax: </strong></td>
-                    <td>$<%= @product.sale_tax %></td>
+                    <td><%=number_to_currency( @product.sale_tax )%></td>
                   </tr>
                   <tr>
                     <td><strong>Total: </strong></td>
-                    <td>$<%= @product.total_cost %></td>
+                    <td><%=number_to_currency( @product.total_cost )%></td>
                   </tr>
                 </table>
               </div>
             </div>
 
             <div class="row">   
-              <br>
-              <p id="description"><%= @product.description %></p>
+              <div class="col-sm-12 col-md-12">
+                <br>
+                <p id="description"><%= @product.description %></p>
+              </div>
             </div>
 
           </div>
@@ -82,17 +84,17 @@
         <div class="row">
           <div class="col-md-12">
             <%= form_tag "/orders", method: :post do %>
-              <div>
-                <%= label_tag :product_id %>
-                <%= text_field_tag :product_id, @product.id %>
-              </div>
-
-              <div>
+              
+              <div class="form-group">
                 <%= label_tag :quantity %>
                 <%= text_field_tag :quantity %>
-              </div>
+                <%= hidden_field_tag :product_id, @product.id %>
+                
+                <br>
+                <%= submit_tag " Buy", class: "btn btn-success btn-lg #{@product.buy_out_of_stock_class}" %>
+                <!-- <span class='glyphicon glyphicon-shopping-cart'></span> -->
 
-              <%= submit_tag "Buy", class: "btn btn-success #{@product.buy_out_of_stock_class}" %>
+              </div>
 
             <% end %>
 
