--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,16 +3,11 @@
     <div class="col-md-6">
       <h1>Order: #<%= @order.id %></h1>
       <h4>User: <%= @order.user.email %></h4>
-      <h5>Your order has been received and is processing</h5>
       <br>
       <table id="price_table">
         <tr>
-          <td><strong>Product ID: </strong></td>
-          <td><%= @order.product_id %></td>
-        </tr>
-        <tr>
-          <td><strong>Quantity: </strong></td>
-          <td><%= @order.quantity %></td>
+          <td><strong>Order ID: </strong></td>
+          <td><%= @order.id %></td>
         </tr>
         <tr>
           <td><strong>Subtotal: </strong></td>
@@ -27,11 +22,15 @@
           <td><%=number_to_currency( @order.total )%></td>
         </tr>
       </table>
+
+      <% @order.carted_products.each do |carted_product| %>
+        <h4><%= carted_product.product.name %> - Quantity <%= carted_product.quantity %></h4>
+      <% end %>
     </div>
 
     <div class="col-md-6">
       <br>
-      <%= image_tag @order.product.images.first.image_url, class: "img-thumbnail" %>
+      
     </div>
   </div>
 </div>
