--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,10 @@
           <li><a href="/products">Store</a></li>
           <!-- <li><a href="/products/?filter=random">Random Product</a></li> -->
 
-          <li><a href="/inventory">Inventory</a></li>
-          <li><a href="/images">Images</a></li>
+          <% if user_signed_in? && current_user.admin %>
+            <li><a href="/inventory">Inventory</a></li>
+            <li><a href="/images">Images</a></li>
+          <% end %> 
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
