updated validations in models

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -3,12 +3,12 @@
 <%= form_tag '/products', method: :post do %>
   <div>
     <%= label_tag :name %>
-    <%= text_field_tag :name %>
+    <%= text_field_tag :name, @product.name %>
   </div>
 
   <div>
     <%= label_tag :price %>
-    <%= text_field_tag :price %>
+    <%= text_field_tag :price, @product.price %>
   </div>
 
   <div>
@@ -23,12 +23,12 @@
 
   <div>
     <%= label_tag :inventory %>
-    <%= text_field_tag :inventory %>
+    <%= text_field_tag :inventory, @product.inventory %>
   </div>
 
   <div>
     <%= label_tag :description %>
-    <%= text_area_tag :description %>
+    <%= text_area_tag :description, @product.description %>
   </div>
 
   <%= submit_tag "Create Product", class: "btn btn-default" %>
